--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
       }
     ],
     "paths": {
-      "@/components/*": ["./app/components/*"],
-      "@/pages/*": ["./app/pages/*"],
+      "@/components/*": ["./components/*"],
       "@/styles/*": ["./styles/*"],
+      "@/data/*": ["./data/*"],
       "@/public/*": ["./public/*"]
     }
   },
